<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/layout_padding_top"
    android:background="#710000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black_color"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_mail"
        android:textColor="#fdfdfd"
        android:textSize="@dimen/big_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/normal_padding"
        android:text="@string/password"
        android:textColor="@color/black_color"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/password_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_pass"
        android:textColor="#ffffff"
        android:textSize="@dimen/big_text_size" />

    

</LinearLayout>