<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#710000">

    <ImageView
        android:id="@+id/movix_picture"
        android:layout_width="250px"
        android:layout_height="250px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/normal_padding"
        android:src="@mipmap/movix"
        android:contentDescription="@string/image_content_description"
        android:layout_weight="0"
        android:background="#710000" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_padding"
        android:text="@string/create_account"
        android:textColor="#1bd427"
        android:background="#710000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/normal_padding"
        android:text="@string/email"
        android:textSize="@dimen/normal_text_size"
        android:textColor="#fcfcfc" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/normal_padding"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/password"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/normal_padding"
        android:text="@string/connect"
        android:background="#710000"
        android:textColor="#ffffff" />

</LinearLayout>